[package]
name = "nnus"
version = "1.0.0"
authors = ["Half-Shot <will@half-shot.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.20.0"
r2d2 = "0.8.7"
r2d2_sqlite = "0.12.0"
time = "0.1.42"
actix-web = "1.0.9"
serde = "1.0"
